    time unit parameter. (zxu via rkanter)

    HADOOP-12482. Race condition in JMX cache update. (Tony Wu via lei)

    HADOOP-12565. Replace DSA with RSA for SSH key type in SingleCluster.md.
    (Mingliang Liu via aajisaka)

    HADOOP-12602. TestMetricsSystemImpl#testQSize occasionally fails.
    (Masatake Iwasaki via aajisaka)

Release 2.7.2 - UNRELEASED

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

    HADOOP-12232. Upgrade Tomcat dependency to 6.0.44. (cnauroth)

  OPTIMIZATIONS

  BUG FIXES

    HADOOP-12186. ActiveStandbyElector shouldn't call monitorLockNodeAsync
    multiple times (zhihai xu via vinayakumarb)

    HADOOP-12191. Bzip2Factory is not thread safe. (Brahma Reddy Battula
    via ozawa)

    HDFS-8767. RawLocalFileSystem.listStatus() returns null for UNIX pipefile.
    (kanaka kumar avvaru via wheat9)

    HADOOP-12304. Applications using FileContext fail with the default file
    system configured to be wasb/s3/etc. (cnauroth)

    HADOOP-12061. Incorrect command in single cluster setup document.
    (Kengo Seki via aajisaka)

    HADOOP-12359. hadoop fs -getmerge doc is wrong.
    (Jagadesh Kiran N via aajisaka)

    HADOOP-10365. BufferedOutputStream in FileUtil#unpackEntries() should be
    closed in finally block. (Kiran Kumar M R and Sanghyun Yun via ozawa)

    HADOOP-12006. Remove unimplemented option for `hadoop fs -ls` from
    document in branch-2.7. (Akira AJISAKA via ozawa)

    HADOOP-12213. Interrupted exception can occur when Client#stop is called.
    (Kuhu Shukla via ozawa)
    
    HADOOP-12451. Setting HADOOP_HOME explicitly should be allowed. (kasha)

    HADOOP-12230. hadoop-project declares duplicate, conflicting curator
    dependencies. (Rakesh R via aajisaka)

    HADOOP-12465. Incorrect javadoc in WritableUtils.java.
    (Jagadesh Kiran N via aajisaka)

    HADOOP-12464. Interrupted client may try to fail-over and retry (kihwal)

    HADOOP-9242. Duplicate surefire plugin config in hadoop-common.