@@ -33,6 +33,9 @@ Release 2.7.3 - UNRELEASED
     HADOOP-12602. TestMetricsSystemImpl#testQSize occasionally fails.
     (Masatake Iwasaki via aajisaka)
 
+    HADOOP-12588. Fix intermittent test failure of TestGangliaMetrics.
+    (Masatake Iwasaki via aajisaka)
+
 Release 2.7.2 - UNRELEASED
 
   INCOMPATIBLE CHANGES
